Fix background flicker

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1630,7 +1630,10 @@
 
 	body {
 		background-color: #000000;
-		background-image: url("images/overlay.jpg");
+		background-image: url("images/overlay.jpg"), -moz-linear-gradient(45deg, #000000 15%, #000000 85%);
+		background-image: url("images/overlay.jpg"), -webkit-linear-gradient(45deg, #000000 15%, #000000 85%);
+		background-image: url("images/overlay.jpg"), -ms-linear-gradient(45deg, #000000 15%, #000000 85%);
+		background-image: url("images/overlay.jpg"), linear-gradient(45deg, #000000 15%, #000000 85%);
 	}
 
 		body.is-loading *, body.is-loading *:before, body.is-loading *:after {
